Account controller, views and models updated

--- a/AspNetOwin/AspNetOwin.csproj
+++ b/AspNetOwin/AspNetOwin.csproj
@@ -153,6 +153,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
