--- a/AspNetOwin/Web.config
+++ b/AspNetOwin/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -71,6 +71,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="AspNetOwinContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=AspNetOwin.Models.DB.AspNetOwinContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AspNetOwinDbContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=AspNetOwin.Core.Models.DB.AspNetOwinDbContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
